--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
         <ul class="deck"> 
         </ul>
+
+        <span class="timer"></span>
     </div>
 
     <script src="js/app.js"></script>
