--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         <span class="timer"></span>
     </div>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Congrats! You Win!!</p>
+      </div>
+
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
