Add more information to the modal

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Congrats! You Win!!</p>
+         <p>Congrats! You Win!! <br/> <br/> You took <span id="time-consumed"></span> to finish the game</p>  
+         <p>Your Star rating is <span id="star-rating"></span></p><br/>
+        <button class="play-again-button"> Play again </button>
+
       </div>
 
     </div>
